--- a/public/css/style-timer.css
+++ b/public/css/style-timer.css
@@ -53,3 +53,9 @@
         border-radius: 20px !important;
     }
 }
+
+@media (max-width: 575px) {
+    .input-timer {
+        width: 50%;
+    }
+}
