--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,3 +1,64 @@
 .nav-link{
     color: #fff !important;;
 }
+
+/* Footer */
+.footer-section {
+    background-color: #212529;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .footer-row {
+    height: 60px;
+  }
+  
+  .footer-col {
+    color: #fff;
+    font-weight: lighter;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .footer-col a {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  .footer-col a i {
+    font-size: 40px;
+    margin-left: 20px;
+    transition: 0.1s;
+  }
+  
+  .footer-col a i:hover {
+    font-size: 45px;
+  }
+  
+  .footer-col a#name {
+    color: #fff;
+    font-weight: bold;
+    text-decoration: underline;
+    transition: 0.2s;
+  }
+  
+  .footer-col a#name:hover {
+    text-decoration: none;
+  }
+
+  .author-footer{
+    font-size: 14pt; 
+    font-weight: 500;
+    position: relative;
+    bottom: 5pt;
+    margin-left: 3pt;
+  }
+  
+  @media(max-width: 575px) {
+  
+    .footer-col {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
