--- a/public/css/historic.css
+++ b/public/css/historic.css
@@ -26,6 +26,16 @@ thead tr th, tbody tr th{
     margin-top: 8rem!important;
 }
 
+@media (max-width: 425px) {
+    .mt-custom {
+        margin-top: 5rem!important;
+    }
+
+    .table-font-size-custom {
+        font-size: 10pt;
+    }
+}
+
 @media (max-width: 767px) {
     .custom-width {
         width: 50% !important;
